# GSound-SIR

./: .gitmodules  README.md  py_auralizer.py
auralizer/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
auralizer/spherical_harmonics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
auralizer/src/cpp/: binding.cpp
auralizer/src/spherical_harmonics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ray_generator/: .gitignore  CMakeLists.txt  README.md  pipeline.py  setup.py
ray_generator/examples/: mesh_sim.py  path_data_obj.json  path_data_shoebox.json
ray_generator/src/GSound/: CMakeLists.txt
ray_generator/src/GSound/gsound/: gsImpulseResponse.cpp  gsPropagationFlags.h  gsSoundPropagator.cpp  gsSoundPropagator.h
ray_generator/src/GSound/optix/: OptixContext.cpp  OptixContext.h  OptixScene.cpp  OptixScene.h  gsound_optix_shared.h  kernels.cu
ray_generator/src/pygsound/: CMakeLists.txt
ray_generator/src/pygsound.egg-info/: SOURCES.txt  top_level.txt
ray_generator/src/pygsound/src/: BatchProcessor.cpp  BatchProcessor.hpp  Context.cpp  Device.cpp  Device.hpp  Scene.cpp  Scene.hpp  module.cpp
ray_generator/tests/: comparison_test.py  rigorous_comparison_test.py  rir_test.py  test_batch_processing.py
